--- a/sydneybarrett.html
+++ b/sydneybarrett.html
@@ -25,8 +25,8 @@
                     Personajes
                     <ul id="submenu">
                         <li><a href="davidhaller.html">-David</a></li>
-                        <li><a href="sydneybarrett.html">-Sydney</a></li>
-                        <li><a class="activo" href="lennybusker.html">-Lenny</a></li>
+                        <li><a class="activo" href="sydneybarrett.html">-Sydney</a></li>
+                        <li><a href="lennybusker.html">-Lenny</a></li>
                         <li><a href="amahlfarouk.html">-Farouk</a></li>
                         <li><a href="oliverbird.html">-Oliver</a></li>
                         <li><a href="melaniebird.html">-Melanie</a></li>
@@ -43,41 +43,33 @@
 
     </header>
     <section >
-        <article class="principal" id="lenny">
+        <article class="principal" id="syd">
         </article>
         <article class="container2">
             <div class="texto">
-                <h1>Lenny Busker</h1>
+                <h1>Sydney Barrett</h1>
                 <p>
-                    Amiga de Haller quien tiene una historia de abuso de alcohol y drogas, además de un comportamiento áspero.​ Muere en el hospital psiquiátrico cuando David y Syd intercambian cuerpos. A partir de ese momento, su forma es utilizada por Shadow King.
+                    Una mujer joven que se convierte en la novia de Haller. Ella no deja que nadie la toque físicamente ya que al hacerlo, su mente se intercambia con la mente de la persona que toca. El personaje lleva ese nombre debido a que Roger "Syd" Barrett ,de la banda de rock Pink Floyd, fue una influencia musical importante en la serie para Hawley.
                 </p>
             </div>
         </article>
         <article  id="impar" class="container" >
             <div class="texto">
-                <h2>Dan Stevens</h2>
+                <h2>Rachel Keller</h2>
                 <p>
-                    Aubrey Plaza interpreta al amigo de David, "Lenny Busker". A pesar de una vida de abuso de drogas y alcohol, Lenny, la amiga de David, sabe que cualquier día su vida va a cambiar, lo que le da la energía agradable del optimista imposible. En su nueva posición como mano derecha de David, Lenny se ve atrapada entre su búsqueda de la felicidad personal y la ejecución de los planes de David.
+                    Rachel Keller interpreta a "Sydney 'Syd' Barrett". Autosuficiente y astuta en la calle, Syd usó su comportamiento mordaz para mantener a la gente a distancia hasta que se enamoró de David, un poderoso mutante. Tuvieron un romance durante siglos, hasta que Syd fue traicionada por el hombre en el que más confiaba. Ahora dedicada a sí misma por encima de todos los demás, Syd reconoce que su ex nunca fue el héroe de esta historia. Es ella.
                 </p>
                 <br /><br />
 
                 <h3>Trabajos destacados</h3>
                 <p>
-                    Plaza produjo y protagonizó Ingrid Goes West, que se estrenó en el Festival de Cine de Sundance de 2017 y ganó el premio Waldo Salt Screenwriting Award. La película se proyectó en el Festival de Cine de Londres de 2017. Ingrid Goes West también ganó el premio Independent Spirit a la mejor ópera prima y fue nominada a mejor primer guión.
+                    Rachel Keller, nativa de Minnesota, tuvo un papel destacado en la segunda entrega de la serie de antología Fargo, ganadora del Globo de Oro® de FX, interpretando a "Simone Gerhardt". En su próximo trabajo, se la puede ver en un arco recurrente en la nueva serie de Netflix, The Society, y en la película In the Shadow of the Moon, también para Netflix.
                     <br /><br />
-                    En febrero de 2019, Plaza fue sede de la 34ª edición de los premios Film Independent Spirit.
-                    <br /><br />
-                    Por su memorable papel de “Lenny” en Legion de Noah Hawley, Plaza fue nominada a un premio MTV Movie & TV Award 2018 como Mejor Villano y a un Premio Imagen como Mejor Actriz. A continuación, protagonizará junto a Brian Tyree Henry la nueva versión de Child's Play de MGM.
-                    <br /><br />
-                    Durante siete temporadas, Plaza interpretó a la asistente de bajo rendimiento "April Ludgate" en la serie de comedia Parks and Recreation, nominada al Emmy®, junto a sus coprotagonistas Amy Poehler, Nick Offerman y Chris Pratt. La actuación de Plaza le valió una nominación al American Comedy Award 2014 como Mejor Actriz de Reparto de Comedia y nominaciones al Premio Imagen como Mejor Actriz de Reparto/Televisión en 2010, 2012, 2013 y 2014.
-                    <br /><br />
-                    Protagonizó la célebre ópera prima de Colin Trevorrow, Safety Not Guaranteed, junto a Mark Duplass y Jake Johnson. La película, producida por Jay y Mark Duplass, se estrenó en el Festival de Cine de Sundance de 2012 y recibió el Premio Film Independent Spirit de 2013 al Mejor Primer Guión y una nominación a Mejor Primera Película. Por su actuación en la película, Plaza ganó el Premio ALMA 2012 a la Actriz de Película Favorita - Comedia/Musical.
-                    <br /><br />
-                    Otros créditos cinematográficos incluyen The Little Hours (productor) y Life After Beth de Jeff Baena, An Evening with Beverly Luff Linn, Mike and Dave Need Wedding Dates, Ned Rifle, The To Do List, Damsels in Distress, Scott Pilgrim vs. Mundo y gente divertida de Judd Apatow.
+                    Keller estudió en la Universidad Carnegie Mellon y en el Conservatorio de Artistas Escénicos de Saint Paul. También experimenta como fotógrafa.
                 </p>
 
             </div>
-            <div id="aubrey" class="img-container"></div>
+            <div id="rachel" class="img-container"></div>
         </article>
     </section>
 
