--- a/davidhaller.html
+++ b/davidhaller.html
@@ -21,10 +21,10 @@
             <ul id="menu">
                 <li class="menu"><a href="index.html">Inicio</a></li>
                 <li class="menu"><a href="trama.html">Trama</a></li>
-                <li class="menu">
+                <li id="activo" class="menu">
                     Personajes
                     <ul id="submenu">
-                        <li><a href="davidhaller.html">-David</a></li>
+                        <li><a class="activo" href="davidhaller.html">-David</a></li>
                         <li><a href="sydneybarrett.html">-Sydney</a></li>
                         <li><a href="lennybusker.html">-Lenny</a></li>
                         <li><a href="amahlfarouk.html">-Farouk</a></li>
@@ -35,19 +35,19 @@
                         <li><a href="kerryloudermilk.html">-Kerry</a></li>
                     </ul>
                 </li>
-                <li class="menu"><a href="produccion.html">Produccion</a></li>
+                <li class="menu"><a href="productores.html">Productores</a></li>
                 <li class="menu"><a href="galeria.html">Galería</a></li>
                 <li class="menu"><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
 
     </header>
-    <section id="david">
-        <article class="principal" id="davidinicio">
+    <section >
+        <article class="principal" id="david">
         </article>
         <article class="container2">
             <div class="texto">
-                <h3>David Haller</h3>
+                <h1>David Haller</h1>
                 <p>
                     David Haller es un mutante que fue diagnosticado con esquizofrenia en una edad joven y que conoce a una joven en un hospital psiquiátrico. A medida que David comienza a reconocer sus poderes se revela que en realidad sus síntomas de esquizofrenia eran provocados por un poderoso mutante conocido como Shadow King que se fusionó a su mente cuando era un bebé. Es reclutado por Melanie Bird para unirse a Summerland en la guerra entre los mutantes y Division 3.
                 </p>
@@ -55,7 +55,7 @@
         </article>
         <article  id="impar" class="container" >
             <div class="texto">
-                <h3>Dan Stevens</h3>
+                <h2>Dan Stevens</h2>
                 <p>
                     Dan Stevens nació en la ciudad de Croydon, Surrey, (Londres) y creció en Gales y en el sureste de Inglaterra. Fue adoptado a los pocos días de nacer. Los padres de Stevens son profesores y tiene un hermano menor. Estudió en el colegio privado Tonbridge School, en Kent, donde audicionó para un pequeño papel en la obra Macbeth, donde se entrenaba en la actuación con el National Youth Theatre de Gran Bretaña. En el Emmanuel College de Cambridge estudió Literatura Inglesa y actuó en numerosas obras teatrales realizadas por su universidad.
                     <br /><br />
@@ -63,7 +63,7 @@
                 </p>
                 <br /><br />
 
-                <h4>Trabajos destacados</h4>
+                <h3>Trabajos destacados</h3>
                 <p>
                     Dan Stevens interpretó recientemente a “La Bestia” en la exitosa película de acción real de Disney La Bella y la Bestia.
                     <br /><br />
@@ -77,15 +77,20 @@
                 </p>
 
             </div>
-            <div class="img-container"></div>
+            <div id="dan" class="img-container"></div>
         </article>
     </section>
 
     <footer>
-        <img src="images/redes/facebook.png" alt="Facebook">
-        <img src="images/redes/twitter.png" alt="Twitter">
-        <img src="images/redes/youtube.png" alt="Youtube">
-        <img src="images/redes/instagram.png" alt="Instagram">
+        <div>
+            <img src="images/redes/facebook.png" alt="Facebook">
+            <img src="images/redes/twitter.png" alt="Twitter">
+            <img src="images/redes/youtube.png" alt="Youtube">
+            <img src="images/redes/instagram.png" alt="Instagram">
+        </div>
+        <div class="derechos">
+            <p>&copy; DERECHOS RESERVADOS 2024. MITRE, MARTIN FEDERICO</p>
+        </div>
     </footer>
     <script type="text/javascript">
         function myFunction() {
