--- a/galeria.html
+++ b/galeria.html
@@ -36,28 +36,28 @@
                         <li><a href="kerryloudermilk.html">-Kerry</a></li>
                     </ul>
                 </li>
-                <li class="menu"><a href="produccion.html">Produccion</a></li>
-                <li class="menu"><a href="galeria.html">Galería</a></li>
+                <li class="menu"><a href="productores.html">Productores</a></li>
+                <li class="menu"><a class="activo" href="galeria.html">Galería</a></li>
                 <li class="menu"><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="galeria">
         <article class="principal">
             <div>
-                <p>Galeria</p>
+                <h1>Galeria</h1>
             </div>
         </article>
 
             
-        <article class="secundario">
+        <article class="personajes">
             <div> 
                 <a class="example-image-link" href="images/I1.jpg" data-lightbox="Legion" data-title="Portada del comic en el que fue basada la serie."><img class="example-image" src="images/I1_min.jpg" alt="Portada del comic en el que fue basada la serie." /></a>
                 <a class="example-image-link" href="images/I2.jpg" data-lightbox="Legion" data-title="David Haller mirando a camara."><img class="example-image" src="images/I2_min.jpg" alt="David Haller mirando a camara." /></a>
                 <a class="example-image-link" href="images/I3.jpg" data-lightbox="Legion" data-title="David usando sus poderes."><img class="example-image" src="images/I3_min.jpg" alt="David usando sus poderes." /></a>
                 <a class="example-image-link" href="images/I4.jpg" data-lightbox="Legion" data-title="David no puede controlar sus poderes."><img class="example-image" src="images/I4_min.jpg" alt="David no puede controlar sus poderes." /></a>
-                <a class="example-image-link" href="images/I5.jpg" data-lightbox="Legion" data-title="David conoce a Melanie."><img class="example-image" src="images/I5_min.jpg" alt="David Haller." /></a>
-                <a class="example-image-link" href="images/I6.jpg" data-lightbox="Legion" data-title="David Haller."><img class="example-image" src="images/I6_min.jpg" alt="David Haller." /></a>
+                <a class="example-image-link" href="images/I5.jpg" data-lightbox="Legion" data-title="David conoce a Melanie."><img class="example-image" src="images/I5_min.jpg" alt="David conoce a Melanie." /></a>
+                <a class="example-image-link" href="images/I6.jpg" data-lightbox="Legion" data-title="Batalla entre David y Farouk."><img class="example-image" src="images/I6_min.jpg" alt="Batalla entre David y Farouk." /></a>
             </div>
 
 
@@ -92,10 +92,15 @@
     </section>
 
     <footer>
-        <img src="images/redes/facebook.png" alt="Facebook">
-        <img src="images/redes/twitter.png" alt="Twitter">
-        <img src="images/redes/youtube.png" alt="Youtube">
-        <img src="images/redes/instagram.png" alt="Instagram">
+        <div>
+            <img src="images/redes/facebook.png" alt="Facebook">
+            <img src="images/redes/twitter.png" alt="Twitter">
+            <img src="images/redes/youtube.png" alt="Youtube">
+            <img src="images/redes/instagram.png" alt="Instagram">
+        </div>
+        <div class="derechos">
+            <p>&copy; DERECHOS RESERVADOS 2024. MITRE, MARTIN FEDERICO</p>
+        </div>
     </footer>
     <script type="text/javascript">
         function myFunction() {
