--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
             <nav id="menu_bar" class="">
                 <ul id="menu">
-                    <li class="menu"><a href="index.html">Inicio</a></li>
+                    <li class="menu"><a class="activo" href="index.html">Inicio</a></li>
                     <li class="menu"><a href="trama.html">Trama</a></li>
                     <li class="menu">
                         Personajes
@@ -35,7 +35,7 @@
                             <li><a href="kerryloudermilk.html">-Kerry</a></li>
                         </ul>
                     </li>
-                    <li class="menu"><a href="produccion.html">Produccion</a></li>
+                    <li class="menu"><a href="productores.html">Productores</a></li>
                     <li class="menu"><a href="galeria.html">Galería</a></li>
                     <li class="menu"><a href="contacto.html">Contacto</a></li>
                 </ul>
@@ -59,7 +59,7 @@
         </article>
         <article id="impar" class="container2">
             <div class="texto">
-                <h3>Personajes</h3>
+                <h2>Personajes</h2>
                 <p>descubrilos y a quienes los interpretan</p>
             </div>
             <article class="personajes">
@@ -92,6 +92,11 @@
                         <h4>Oliver Bird</h4>
                     </a>
 
+                    <a href="melaniebord.html">
+                        <img src="images/melaniemin.jpg" alt="melanie">
+                        <h4>Melanie Bird</h4>
+                    </a>
+
                     <a href="ptonomywallace.html">
                         <img src="images/ptonomymin.jpg" alt="ptonomy">
                         <h4>Ptonomy Wallace</h4>
@@ -109,20 +114,25 @@
                 </div>
             </article>
         </article>
-        <article id="produccion" class="container2">
+        <article class="container2">
             <div class="texto">
-                <h3>Produccion</h3>
+                <h3>Productores</h3>
                 <p>Conoce a los responsables de traer esta historia a la gran pantalla</p>
-                <a class="boton" href="produccion.html">ir</a>
+                <a class="boton" href="productores.html">ir</a>
             </div>
         </article>
     </section>
 
     <footer>
-        <img src="images/redes/facebook.png" alt="Facebook">
-        <img src="images/redes/twitter.png" alt="Twitter">
-        <img src="images/redes/youtube.png" alt="Youtube">
-        <img src="images/redes/instagram.png" alt="Instagram">
+        <div>
+            <img src="images/redes/facebook.png" alt="Facebook">
+            <img src="images/redes/twitter.png" alt="Twitter">
+            <img src="images/redes/youtube.png" alt="Youtube">
+            <img src="images/redes/instagram.png" alt="Instagram">
+        </div>
+        <div class="derechos">
+            <p>&copy; DERECHOS RESERVADOS 2024. MITRE, MARTIN FEDERICO</p>
+        </div>
     </footer>
     <script type="text/javascript">
         function myFunction() {
