--- a/trama.html
+++ b/trama.html
@@ -20,7 +20,7 @@
         <nav id="menu_bar" class="">
             <ul id="menu">
                 <li class="menu"><a href="index.html">Inicio</a></li>
-                <li class="menu"><a href="trama.html">Trama</a></li>
+                <li class="menu"><a class="activo" href="trama.html">Trama</a></li>
                 <li class="menu">
                     Personajes
                     <ul id="submenu">
@@ -35,38 +35,36 @@
                         <li><a href="kerryloudermilk.html">-Kerry</a></li>
                     </ul>
                 </li>
-                <li class="menu"><a href="produccion.html">Produccion</a></li>
+                <li class="menu"><a href="productores.html">Productores</a></li>
                 <li class="menu"><a href="galeria.html">Galería</a></li>
                 <li class="menu"><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
 
     </header>
-    <section id="trama">
+    <section >
         <article class="principal">
             <div>
-                <p>Conoce de que trata</p>
+                <h1>Conoce de que trata</h1>
             </div>
         </article>
 
-        <article id="resumen" class="container">
-            <div class="img-container"></div>
+        <article class="container">
+            <div id="trama" class="img-container"></div>
             <div class="texto">
 
                 <h2>Trama</h2>
                 <p>
-                    Legion es una serie de televisión estadounidense, creada por Noah Hawley para el canal FX, 
-                    y basada en el personaje de Marvel Comics David Haller / Legión. 
-                    Está conectada con el universo cinematográfico X-Men, 
-                    siendo la primera serie en cumplir dicha característica, 
-                    y es producida por FX Productions en asociación con Marvel Television. 
+                    Legion es una serie de televisión estadounidense, creada por Noah Hawley para el canal FX,
+                    y basada en el personaje de Marvel Comics David Haller / Legión.
+                    Está conectada con el universo cinematográfico X-Men,
+                    siendo la primera serie en cumplir dicha característica,
+                    y es producida por FX Productions en asociación con Marvel Television.
                     Hawley ejerce de showrunner de la serie.
                     Dan Stevens interpreta a Haller, un mutante diagnosticado con esquizofrenia a una edad temprana.
-                    El reparto lo completan Rachel Keller, Aubrey Plaza, Bill Irwin, Jeremie Harris, 
+                    El reparto lo completan Rachel Keller, Aubrey Plaza, Bill Irwin, Jeremie Harris,
                     Amber Midthunder, Katie Aselton y Jean Smart.
-                </p>
-                <br />
-                <p>
+                    <br /><br />
                     David Haller es un joven diagnosticado de esquizofrenia que ha pasado su vida recluido
                     en un psiquiátrico. Pero, de repente, comienza a plantearse una cuestión clave:
                     ¿y si sus visiones no son un síntoma de locura sino la verdadera realidad?
@@ -85,42 +83,35 @@
                     los primeros días de ser consciente que existe algo llamado mutantes, aunque los civiles no lo sepan".
                     Sintió que era poco probable que los personajes se entrecruzaran entre la serie y las películas,
                     aunque señaló que esto podría cambiar entre ese momento y el estreno de la serie.
-                </p>
-                <br />
-                <p>
+                    <br /><br />
                     En julio de ese año, un artículo publicado en Marvel.com se refirió a Legión como uno de los varios personajes que se unen al Universo cinematográfico de Marvel, sugiriendo que Legion se ubicaría en ese universo compartido como las otras series de Marvel Television. El mes siguiente, Bryan Singer dijo que Legion en realidad había sido diseñada para encajar en el universo X-Men, pero también para ser independiente, por lo que "no se debería etiquetar" la relación entre la serie y las películas. También bromeó con los planes de que la serie "se relacione con las futuras películas de X-Men".
-                </p>
-                <br />
-                <p>
+                    <br /><br />
                     En la New York Comic-Con de 2016, Donner dijo que la serie "está lejos de las películas de X-Men, pero aún vive en ese universo. La única forma de que X-Men siga avanzando es ser original y sorprender. Y esto es una de las sorpresas. Es muy, muy diferente". Hawley explicó que debido a que la serie está representando la "realidad subjetiva" del personaje del título, no tendría que abordar ninguna conexión con las películas de inmediato, señalando que Fargo, que está conectado a la película de 1996 del mismo nombre; al principio "tenía para pararse sobre sus propios pies" antes de explorar esas conexiones extra. "Tenemos que ganarnos el derecho de ser parte de este universo. Mi esperanza es que creemos algo tan fuerte que las personas en el estudio de cine llamen y digan que serían lo suficientemente tontos como para no conectar estas cosas". También dijo que "no se puede contar esta historia sin reconocer que Legión es el hijo de Charles Xavier, que aparece en las películas".
-                </p>
-                <br />
-                <p>
+                    <br /><br />
                     Con respecto al UCM, Jeph Loeb declaró que su participación en la serie era una señal de que "se están haciendo los puentes" entre Marvel y Fox, "pero no quiero hacer ninguna promesa... Los héroes de Marvel en su núcleo son personas que están dañadas y están tratando de descubrir quiénes son en la vida. No importa si son o no X-Men, Tony Stark, Matt Murdock o Peter Parker... Si comienzas en un lugar tan fuerte como el de David y tienes un narrador como Noah; entonces es Marvel. De esa forma, todo está conectado".
-                </p>
-                <br />
-                <p>
+                    <br /><br />
                     Loeb y Donner declararon en enero de 2017 que no había planes para que Legion fuera el primero de una serie de programas interconectados en la cadena FX, como ocurre en el grupo de Marvel Television The Defenders en la plataforma Netflix. Igualmente, la producción de Legion y las películas de X-Men "no interferirán la una con la otra".
-                </p>
-                <br />
-                <p>
+                    <br /><br />
                     Donner declaró que la serie era solo una oportunidad de traer un personaje de X-Men a la pantalla que no iba a ser utilizado por las películas. Los productores esperaban que el público mirara el show por su enfoque de personaje y el talento de Hawley y el elenco, en lugar de "ver un espectáculo de franquicia de Marvel". Donner también notó que Hawley se enfocaba en la perspectiva de la realidad de Haller en lugar de las conexiones con las películas de X-Men. La serie evitó la intrincada continuidad de las películas, "porque jugamos con tantas líneas de tiempo diferentes, y reiniciamos y no reiniciamos realmente todo eso" a lo largo de las películas. Por lo tanto, "el universo cinematográfico no se preocupará por Legion. No se preocuparán por nada de estos mundos televisivos. Simplemente continuarán en la forma en que continuaron".
-                </p>
-                <br />
-                <p>
+                    <br /><br />
                     Para la confirmación en pantalla de que Xavier es el padre de Haller en el Episodio 7, con la silla de ruedas exclusiva de Xavier mostrada en un breve flashback, la producción de la serie pudo elegir entre cualquiera de las sillas de ruedas diferentes utilizadas en toda la saga de películas. Se decidieron por la versión de X-Men: Apocalipsis, con el objeto utilizado en esa película sacado de su almacén para usarlo en la serie.
                 </p>
 
             </div>
-            <div class="img-container"></div>
+            <div id="trama2" class="img-container"></div>
         </article>
     </section>
 
     <footer>
-        <img src="images/redes/facebook.png" alt="Facebook">
-        <img src="images/redes/twitter.png" alt="Twitter">
-        <img src="images/redes/youtube.png" alt="Youtube">
-        <img src="images/redes/instagram.png" alt="Instagram">
+        <div>
+            <img src="images/redes/facebook.png" alt="Facebook">
+            <img src="images/redes/twitter.png" alt="Twitter">
+            <img src="images/redes/youtube.png" alt="Youtube">
+            <img src="images/redes/instagram.png" alt="Instagram">
+        </div>
+        <div class="derechos">
+            <p>&copy; DERECHOS RESERVADOS 2024. MITRE, MARTIN FEDERICO</p>
+        </div>
     </footer>
     <script type="text/javascript">
         function myFunction() {
